--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.6",
+    "puppeteer": "^24.32.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
